src/scss/entry/all.scss
/* ... */
.fast-user-search-item {
    a {
        padding: 0 !important;
    }
    .current-status-container {
        display: flex;
        align-items: center;
        gap: 5px;
        margin-right: 6px;

        .presence-location {
            text-align: right;
        }

        .join-user-btn {
            max-width: fit-content;
            padding: 4px 2px;
            text-align: center;
        }
    }

    .user-info-container {
        display: flex;
        align-items: center;
        flex: 1;
        .user-info {
            line-height: 100%;
        }

        .user-names-container {
            display: flex;
            gap: 4px;
        }

        .avatar {
            margin: 0 8px;

            &,
            .avatar-card-image {
                height: 45px;
                width: 45px;
                padding-top: 0;
            }

            .presence-status-label {
                zoom: 75%;
            }
        }
    }
}

.roseal-offline-icon {
    display: inline-block;
    height: 20px;
    width: 20px;
    border-radius: 50%;
    background: #a8a8a8;
    outline: 3px #4b5563 solid;
    outline-offset: -3px;
    top: -20px;
    position: absolute;
    left: -25px;
}

[data-rosealfe-removewhitebackgroundfriendcarouselsdarktheme]
    .dark-theme
    .react-friends-carousel-container
    .avatar-card-image {
    background-color: var(--RS_BACKGROUND-3-COLOR);
}

.pointer-events-all {
    pointer-events: all !important;
}

.roseal-item-card-container {
    .value-cost-container {
        .icon-robux-16x16 {
            margin-bottom: 0;
            margin-right: 0;
        }
    }

    .item-card-thumb-container-inner {
        width: 100%;
        height: 100%;
    }

    .look-img-container {
        display: flex;
        justify-content: center;
        width: 100%;
        height: 100%;

        .look-img {
            width: auto;
        }
    }
}

.roseal-left-nav-item {
    padding-right: var(--padding-xxsmall);
    padding-left: var(--padding-xsmall);

    .nav-item-link {
        overflow: hidden;
        display: flex;
        border-radius: var(--radius-medium);
        gap: var(--gap-small);
        font: var(--typography-title-large-font);
        letter-spacing: var(--typography-title-large-letter-spacing);
        color: var(--color-content-emphasis);
        align-items: center;
        position: relative;

        &::before {
            position: absolute;
            width: 100%;
            height: 100%;
            content: "";
            transition-property:
                color,
                background-color,
                border-color,
                -webkit-text-decoration-color,
                text-decoration-color,
                fill,
                stroke;
            transition-timing-function: var(--ease-linear);
            transition-duration: var(--time-100);
        }

        &:hover::before {
            background-color: var(--color-state-hover);
        }
    }

    .nav-item-icon {
        display: flex;
        justify-content: center;
        flex-basis: auto;
        flex-shrink: 0;
        flex-grow: 0;
        width: var(--size-1000);
        height: var(--size-1000);
        align-items: center;

        .roseal-icon {
            width: var(--icon-size-large);
            height: var(--icon-size-large);
            flex-basis: auto;
            flex-shrink: 0;
            flex-grow: 0;
        }

        .icon-default-logo-r {
            zoom: 80%;
        }
    }
}

